--- a/package.json
+++ b/package.json
@@ -9,12 +9,10 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "i18next": "^23.11.5",
-    "react-i18next": "^14.1.2"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.1",
-    "vite": "^5.0.0"
+    "vite": "^4.5.0"
   }
 }
